# simple-cubesat-sim

./: .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  config.sample.json  plan.md  pyproject.toml  tasks.md
backend/: config.py  main.py
backend/actuators/: magnetorquer.py  reaction_wheel.py
backend/api/: __init__.py
backend/control/: attitude_controller.py  attitude_target.py  auto_unloading.py  bdot.py  rw_unloading.py  target_direction.py
backend/dynamics/: orbit.py  quaternion.py
backend/hardware/: __init__.py  pico_rw_controller.py
backend/power/: __init__.py  battery.py  eclipse.py  power_system.py  solar_panel.py
backend/prediction/: __init__.py  contact_predictor.py  models.py
backend/simulation/: __init__.py  engine.py  spacecraft.py
backend/timeline/: __init__.py  timeline_manager.py
backend/utils/: coordinates.py
frontend/: package-lock.json  package.json
frontend/e2e/: viewer.spec.ts
frontend/src/: App.css  App.tsx
pico-rw-mock/: Cargo.toml  README.md
pico-rw-mock/host/: main.py  motor_control.py  pyproject.toml
pico-rw-mock/src/: main.rs
scripts/: battery_sizing.py
tests/integration/: test_auto_unloading.py  test_pointing_config.py  test_rw_saturation_unloading.py  test_timeline.py  test_websocket_telemetry.py
tests/unit/: test_attitude_controller.py  test_attitude_target.py  test_bdot.py  test_contact_predictor.py  test_coordinates.py  test_footprint_calculation.py  test_magnetorquer.py  test_orbit.py  test_pico_rw_controller.py  test_power.py  test_quaternion.py  test_reaction_wheel.py  test_rw_unloading.py  (+4 more)
(+22 files in other folders)
