[package]
name = "pico-rw-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
critical-section = "1.2.0"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
panic-halt = "0.2.0"
rp-pico = { version = "0.9.0", features = ["critical-section-impl"] }
usb-device = "0.3.2"
usbd-hid = "0.8.2"
zerocopy = { version = "0.8.31", features = ["derive"] }
